--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,30 +1,5 @@
-{{!-- footer.hbs --}}
-<style>
-.main-footer {
-    width: 100%;
-    text-align: center;
-    background-color: #1E1E2F;
-    color: #cccccc;
-    padding: 20px;
-    font-size: 0.9em;
-    transition: background-color 0.3s ease;
-}
-
-.main-footer:hover {
-    background-color: #25253C;
-}
-
-.main-footer a {
-    color: #FFD700;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.main-footer a:hover {
-    color: #FFC107;
-}
-</style>
-<footer class="main-footer">
+<link rel="stylesheet" href="/css/head_foot.css">
+<footer>
     <p>&copy; 2024 HANU Email Web. All rights reserved.</p>
-    <p>Contact me: <a href="mailto:dluy2406@gmail.com">dluy2406@mgmail.com</a> | Phone: 0383522512</p>
+    <p>Contact me: <a href="mailto:dluy2406@gmail.com">dluy2406@gmail.com</a> | Phone: 0383522512</p>
 </footer>
